--- a/changelog
+++ b/changelog
@@ -1,5 +1,5 @@
-astlib (0.7.0-1) unstable; urgency=low
+astlib (0.7.0-1precise1) precise; urgency=low
 
-  * Initial release (Closes: #nnnn)  <nnnn is the bug number of your ITP>
+  * Initial release 
 
  -- Gijs Molenaar <gijs@pythonic.nl>  Tue, 28 Jan 2014 16:24:32 +0200
