--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+astlib (0.7.0-1precise2) precise; urgency=low
+
+  * fix clean script
+
+ -- Gijs Molenaar <gijs@pythonic.nl>  Tue, 28 Jan 2014 16:42:16 +0200
+
 astlib (0.7.0-1precise1) precise; urgency=low
 
   * Initial release 
