--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+astlib (0.8.0-1trusty) trusty; urgency=medium
+
+  * new upstream release
+
+ -- Gijs Molenaar (launchpad ppa build key) <gijs@pythonic.nl>  Mon, 26 Jan 2015 14:46:54 +0200
+
 astlib (0.7.0-1trusty) trusty; urgency=low
 
   * build for trusty
