--- a/README
+++ b/README
@@ -1,3 +1,8 @@
 debian package files for astLib
 
 http://astlib.sourceforge.net/
+
+
+packaging related issues should be reported here
+
+https://github.com/radio-astro/packaging
